# worktree

./: .gitignore  Cargo.toml  README.md
scripts/: daily-driver.sh
src/: app.rs  cli.rs  config.rs  git.rs  lock.rs  main.rs  repo.rs
tests/: worktree.rs
