[package]
name = "worktree"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"

[package.metadata.worktree.commands.codex]
program = "codex"
args = ["--dangerously-bypass-approvals-and-sandbox"]

[package.metadata.worktree.commands.claude]
program = "claude"
args = ["--dangerously-skip-permissions"]

